--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,14 @@ target/
 *.tar.gz
 *.rar
 
+resources/application.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
 
 .DS_Store
+
+.env
 
 ### IntelliJ IDEA ###
 .idea
